fix-footer-wrap-nav

--- a/components/shared/Header/Header.module.css
+++ b/components/shared/Header/Header.module.css
@@ -73,60 +73,32 @@
   border-bottom: none;
 }
 
-/* 
-.header_mob_tab_nav_item span {
+
+.header_mob_tab_nav_item span,
+.header_mob_tab_nav_item .header_mob_nav_dash {
+  opacity: 0;
+  transition: opacity 1.1s allow-discrete;
   display: none;
 }
 
-.header_mob_tab_nav_item span.header_mob_nav_dash {
-  display: inline;
+.header_mob_tab_nav_item .header_mob_nav_dash {
+  display: inline; 
+  opacity: 1;
+
 }
 
 .header_mob_tab_nav_item:hover span,
-.header_mob_tab_nav_item:focus span,
-.header_mob_tab_nav_item:active span {
-  display: inline;
-  color: #f2cb12;
-} */
-
-
-
-/* .box {
-  opacity: 0;
-  transition: opacity 0.5s allow-discrete;
-  display: none;
-}
-
-input:checked + .box {
+.header_mob_tab_nav_item:hover .header_mob_nav_dash {
+  display: inline; 
   opacity: 1;
-  display: block;
+  color: #f2cb12; 
 }
 
 @starting-style {
-input:checked + .box {
- opacity: 0;
-}
-} */
-
-.header_mob_tab_nav_item span {
-  opacity: 0;
-  transition: opacity 3.5s allow-discrete;
-  display: none;
-}
-
- .header_mob_tab_nav_item span {
-  opacity: 1;
-  color: #f2cb12;
-  display: inline;
-}
-
-@starting-style {
-  .header_mob_tab_nav_item span {
+  .header_mob_tab_nav_item:hover span {
     opacity: 0;
   }
 }
-
-
 
 /* ---------------DESK-------------------- */
 
